@@ -1,8 +1,11 @@
 = Version history =
+
 x.x:
+
 - added: French translation thanks to Faclya (https://github.com/Facyla)(#6)
 - changed: README.txt to README.md for better readability on GitHub
 - changed: CSS definitions of font-size from em to px, for better detection by SpamAssasin
+- changed: encoding of the subject moved to a later stage for more support #7
 
 2.3.1 (2013-04-05):
 
